objects/Tax_ID__c.object
<CustomObject>
    <description>KF(20140507) table added to allow for more than one TaxID per account, per instruction from CIP and National SME&apos;s</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tax IDs</relationshipLabel>
        <relationshipName>Tax_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Applies_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Example(s): Group number level, section/suffix or package/contract code level.</inlineHelpText>
        <label>Applies To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Tax ID</label>
    <nameField>
        <displayFormat>TID-{000000}</displayFormat>
        <label>Tax ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>